<resources>
    <string name="app_name">Notification Scheduler</string>
    <string name="network_type_required">Network Type Required:</string>
    <string name="cancel_job">Cancel Job</string>
    <string name="schedule_job">Schedule Job</string>
    <string name="wi_fi">Wi-Fi</string>
    <string name="any">Any</string>
    <string name="none">None</string>
    <string name="requires">Requires :</string>
    <string name="device_idle">Device Idle</string>
    <string name="device_charging">Device Charging</string>
    <string name="override_deadline">Override Deadline :</string>
    <string name="not_set">Not Set</string>
</resources>
