<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text= "@string/network_type_required"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        android:layout_margin="4dp"

      />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id= "@+id/networkOptions"
        android:layout_margin="4dp"
        >


        <RadioButton
            android:id="@+id/no_network"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/none">

        </RadioButton>

        <RadioButton
            android:id="@+id/any_network"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/any" >

        </RadioButton>

        <RadioButton
            android:id="@+id/wifi_network"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wi_fi">

        </RadioButton>


    </RadioGroup>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text= "@string/requires"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        android:layout_margin="4dp"

        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="4dp"
        >

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/device_idle"
            android:id="@+id/idleSwitch"
            >

        </Switch>

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/device_charging"
            android:id="@+id/chargingSwitch"
            >

        </Switch>


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="4dp"
        >

        <TextView
            android:id="@+id/seekBarLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text= "@string/override_deadline"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:layout_margin="4dp"

            />

        <TextView
            android:id="@+id/seekBarProgress"
            android:text= "@string/not_set"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:layout_margin="4dp"

            />


    </LinearLayout>

    <SeekBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/seekBar"
        android:layout_margin="4dp"
        > </SeekBar>


    <Button
        android:text="@string/schedule_job"
        android:onClick="scheduleJob"
        android:layout_gravity="center_horizontal"
        android:layout_margin="4dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

    </Button>

    <Button
        android:text="@string/cancel_job"
        android:onClick="cancelJob"
        android:layout_gravity="center_horizontal"
        android:layout_margin="4dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

    </Button>


</LinearLayout>